--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -44,18 +44,18 @@
   /* z-index: 1; */
 }
 
-.dropdown-content a {
+.dropdown-content button {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  /* width: 10rem; */
+  width: 10rem;
+  border: none;
+  outline: none;
 }
 
-.dropdown-content a:hover {
+.dropdown-content button:hover {
   background-color: #ddd;
-
-  /* width: 10rem; */
 }
 
 .show {
