--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -14,6 +14,9 @@
   color: white;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dropbtn {
