--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -77,6 +77,17 @@ button > * {
   outline: none;
 }
 
+.nav__changeAlog {
+  background-color: rgb(124, 202, 228);
+  width: 10rem;
+  height: 65px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border: none;
+  outline: none;
+}
+
 .runAlgorithm:hover,
 .runAlgorithm:active .nav__run:hover,
 .nav__run:active {
